#152 fixing CSS Layout cumulative shift for search results (#159)
* Adjusting the CSS of the block

* Limiting the height of the image

* Adjusting the css for the search cards

* Post troubleshootibf css issues for the search results

* LHS has decreased, just checking LHS without await this time

* Putting await back for the search results

* Putting the functions in order in order to avoid confusion

* Fixed the asked issues via the Pull request - https://github.com/hlxsites/24life/pull/159

* the layout shift is happening because of flex configs in the nav specifically for the nav sections and brand

* Updating the fix width of the nav elements in order to avoid any kind of shift

* Updating the CSS for the layout shift

* Trying first with .block.search-results to display only after completely loaded instead of individual cards

* Updating the code wuth Card block display = none initially, once loaded then its status is changing

* Fixing the lint issue

--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -36,11 +36,11 @@ header nav {
 }
 
 header nav .brand {
-  flex: 1;
   display: flex;
   align-items: center;
   padding-left: 15px;
   margin-left: 15px;
+  width: 20vw;
 }
 
 header nav .brand .logo {
@@ -153,6 +153,7 @@ header nav .tools ul {
   margin: 0;
   padding: 0;
   flex: 1;
+  justify-content: flex-end;
 }
 
 header nav .tools ul li {
@@ -238,10 +239,6 @@ header nav .tools .hamburger-close img {
     justify-content: space-between;
   }
 
-  header nav .brand {
-    flex: unset;
-  }
-
   header nav a.search-toggle {
     display: flex;
     align-items: center;
@@ -281,6 +278,7 @@ header nav .tools .hamburger-close img {
     background-color: transparent;
     align-items: center;
     margin: 0 12px 0 24px;
+    width: 25vw;
   }
 
   header nav .search {
@@ -294,6 +292,7 @@ header nav .tools .hamburger-close img {
   header nav .sections {
     display: grid;
     padding: 0;
+    width: 50vw;
   }
 
   header nav .sections .sections-list {
